Don't clip composited scrolling contain:paint

BUG=606342
TEST=fast/css/containment/contain-paint-composited-scroll.html

Review-Url: https://codereview.chromium.org/1985933002
Cr-Commit-Position: refs/heads/master@{#394213}

Former-commit-id: 580ba30eac72aa1c0bf2b93d31a0843211deba92